--- a/tp-js/web/commande.html
+++ b/tp-js/web/commande.html
@@ -21,6 +21,9 @@
              <tr><th>.</th><th>ref</th><th>label</th><th>prix unitaire</th><th>qte</th><th>prix</th></tr>
             </thead>
             <tbody id="bodyTableau">
+			 <!--
+              <tr><td><input type="checkbox"></input></td>...</tr>
+                -->			 
             </tbody>
           </table>
 	    <input type="button" id="btnSuppr" value="supprimer élements sélectionnés" />
