--- a/tp-js/basic_html_test_cypress/commande.html
+++ b/tp-js/basic_html_test_cypress/commande.html
@@ -22,7 +22,7 @@
             </thead>
             <tbody id="bodyTableau">
 			 <!--
-              <tr><td><input type="checkbox"></input></td>...</tr>
+              <tr id="r_p1"><td><input type="checkbox"></input></td>...</tr>
                 -->			 
             </tbody>
           </table>
