--- a/tp-js/myNodeServer/html/index.html
+++ b/tp-js/myNodeServer/html/index.html
@@ -9,7 +9,7 @@
 	<a href="../devise-api/public/devise"> toutes devises</a><br/>
 	<a href="../devise-api/public/devise?changeMini=1.05"> devises avec changeMini=1.05</a><br/>
 	<a href="../devise-api/public/devise/EUR"> devise EUR</a><br/>
-	<a href="../devise-api/public/convert?src=EUR&target=USD&amount=200"> convertir 200 euros en dollar</a><br/>
+	<a href="../devise-api/public/devise-convert?source=EUR&cible=USD&montant=200"> convertir 200 euros en dollar</a><br/>
 
 	<a href="../produit-api/public/produit"> tous les produits</a><br/>
 	<a href="../produit-api/public/produit?prixMini=2.0"> produits avec prixMini=2</a><br/>
